Fix select arrow z-index

--- a/app/styles/modules/select.scss
+++ b/app/styles/modules/select.scss
@@ -29,7 +29,7 @@
     top: 65%;
     right: 10px;
     left: initial;
-    z-index: 10;
+    z-index: 5;
     content: '';
     display: block;
 
