--- a/app/styles/routes/city.scss
+++ b/app/styles/routes/city.scss
@@ -4,7 +4,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 999;
 
     width: 100%;
     height: $layout_nav-height;
